# ragx-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRACTS-PHASE23.md  CONTRACTS.md  LICENSE  README.md  pyproject.toml  ragx-cli-plan.md  skills-lock.json
.agents/skills/zvec/: SKILL.md  api-cheatsheet.md  configuration.md  data-model.md  embedding.md  reranker.md  troubleshooting.md
.agents/skills/zvec/collection-management/: python.md  typescript.md
.agents/skills/zvec/data-operations/: python.md  (+1 more)
.claude/skills/: zvec
.github/workflows/: publish.yml
docs/: feature-temporal-weighting.md  proposal-models-command-interactive-flow.md
research/: bge-m3-colbert-multi-vector-late-interaction-for-ragx-rerank-alternative-and-token-level-graph-edges.md  bge-m3-dense-embeddings-as-ragx-provider-multilingual-quality-and-threshold-calibration.md  bge-m3-dense-q8-vs-nomic-q4-benchmark-2026-07-12-worktree-eval-results.md  bge-m3-sparse-lexical-weights-hybrid-retrieval-leg-for-ragx-vs-sqlite-fts5-bm25.md  bge-m3-subchunk-edge-ablation-2026-07-13-ties-again-and-beta-zero-shortlist-mechanism.md  fine-grained-sub-chunk-edges-with-coarse-chunk-nodes-multi-granularity-graph-rag-literature-validation.md  lm-studio-model-download-api-and-curated-embedding-reranker-catalog-for-ragx-models-command.md  subchunk-edge-ablation-2026-07-12-two-round-experiment-protocol-results-and-verdict.md
skills/ragx-cli/: SKILL.md
src/ragx/cli/: app.py  detect.py  eval_cmd.py  init_prompt.py  inspect_cmd.py  models_cmd.py  models_ui.py  output.py  pipeline.py
src/ragx/core/: catalog.py  chunking.py  communities.py  config.py  discovery.py  errors.py  eval.py  expansion.py  fusion.py  graph.py  indexer.py  lmstudio.py  models.py  query.py  scoring.py  store.py  traversal.py  vectors.py
src/ragx/providers/: base.py  llama_embedder.py  llama_process.py  llama_server.py  openai_compat.py  registry.py  st_reranker.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_communities.py  test_config_rc.py  test_discovery.py  test_eval.py  test_expansion.py  test_fusion.py  test_graph.py  test_inspect.py  test_integration.py  test_llama_server.py  test_models.py  test_providers.py  test_store.py  test_traversal.py  test_vectors.py
(+10 files in other folders)
