[project]
name = "ragx"
version = "0.1.0"
description = "Similarity-graph RAG CLI: index a corpus into a chunk-level embedding graph and query it"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "hnswlib>=0.8",
    "httpx>=0.27",
    "xxhash>=3.4",
    "pathspec>=0.12",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
rerank = ["sentence-transformers>=3.0"]

[project.scripts]
ragx = "ragx.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragx"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "respx>=0.21"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
