[project]
name = "ragx-cli"
version = "0.5.1"
description = "Similarity-graph RAG CLI: index a corpus into a chunk-level embedding graph and query it"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Albert Groothedde", email = "albertgroothedde@gmail.com" }]
keywords = ["rag", "retrieval", "embeddings", "similarity-graph", "cli", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "hnswlib>=0.8",
    "numpy>=1.26",
    "httpx>=0.27",
    "xxhash>=3.4",
    "pathspec>=0.12",
    "tomli-w>=1.0",
    "graspologic-native>=1.3.1",
]

[project.optional-dependencies]
rerank = ["sentence-transformers>=3.0"]

[project.urls]
Repository = "https://github.com/alber70g/ragx-cli"
Issues = "https://github.com/alber70g/ragx-cli/issues"

[project.scripts]
ragx-cli = "ragx.cli.app:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragx"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "respx>=0.21"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
